parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FALSE
    FUNCNAME
    IMPORT
    MOD
    PACKAGE
    PRINT
    RANGE
    TRUE
    UINT

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> statement program
Rule 3     statement -> declaration
Rule 4     statement -> assignment
Rule 5     statement -> print_stmt
Rule 6     statement -> input_stmt
Rule 7     statement -> continue_stmt
Rule 8     statement -> struct_method
Rule 9     statement -> func_def
Rule 10    statement -> func_no_params
Rule 11    statement -> func_call
Rule 12    statement -> if_stmt
Rule 13    statement -> for_stmt
Rule 14    statement -> struct_def
Rule 15    statement -> switch_stmt
Rule 16    statement -> map_declaration
Rule 17    statement -> map_declaration_values
Rule 18    statement -> array_declaration
Rule 19    statement -> slice_declaration
Rule 20    statement -> make_stmt
Rule 21    statement -> new_stmt
Rule 22    statement -> break_stmt
Rule 23    statement -> increment_stmt
Rule 24    statement -> return_stmt
Rule 25    declaration -> VAR VARIABLE type
Rule 26    declaration -> VAR VARIABLE type ASIG expression
Rule 27    expression -> NUMBER
Rule 28    expression -> FLOAT
Rule 29    expression -> VARIABLE
Rule 30    assignment -> VARIABLE ASSIGN expression
Rule 31    assignment -> VARIABLE ASIG expression
Rule 32    print_stmt -> FMT DOT PRINTF LPAREN STRING COMMA expression RPAREN
Rule 33    print_stmt -> FMT DOT PRINTLN LPAREN expression RPAREN
Rule 34    input_stmt -> FMT DOT SCANLN LPAREN AMPER VARIABLE RPAREN
Rule 35    func_def -> FUNC VARIABLE LPAREN param_list RPAREN type LBRACE program RBRACE
Rule 36    func_def -> FUNC VARIABLE LPAREN RPAREN type LBRACE program RBRACE
Rule 37    return_stmt -> RETURN expression
Rule 38    func_no_params -> FUNC VARIABLE LPAREN RPAREN block
Rule 39    func_call -> VARIABLE LPAREN arg_list RPAREN
Rule 40    func_call -> VARIABLE LPAREN RPAREN
Rule 41    param_list -> param
Rule 42    param_list -> param COMMA param_list
Rule 43    param -> VARIABLE type
Rule 44    arg_list -> expression
Rule 45    arg_list -> expression COMMA arg_list
Rule 46    expression -> term
Rule 47    expression -> expression PLUS term
Rule 48    expression -> expression MINUS term
Rule 49    expression -> expression AND expression
Rule 50    expression -> expression OR expression
Rule 51    expression -> expression EQ expression
Rule 52    expression -> expression NE expression
Rule 53    expression -> expression LT expression
Rule 54    expression -> expression GT expression
Rule 55    expression -> expression LE expression
Rule 56    expression -> expression GE expression
Rule 57    term -> factor
Rule 58    term -> term TIMES factor
Rule 59    term -> term DIVIDE factor
Rule 60    factor -> NUMBER
Rule 61    factor -> FLOAT
Rule 62    factor -> STRING
Rule 63    factor -> VARIABLE
Rule 64    factor -> LPAREN expression RPAREN
Rule 65    factor -> make_expr
Rule 66    factor -> struct_instance
Rule 67    type -> INT_TYPE
Rule 68    type -> FLOAT64_TYPE
Rule 69    type -> STRING_TYPE
Rule 70    type -> BOOL_TYPE
Rule 71    if_stmt -> IF expression block
Rule 72    if_stmt -> IF expression block ELSE block
Rule 73    for_stmt -> FOR expression block
Rule 74    for_stmt -> FOR assignment SEMICOLON expression SEMICOLON for_update block
Rule 75    continue_stmt -> CONTINUE
Rule 76    for_update -> assignment
Rule 77    for_update -> increment_stmt
Rule 78    block -> LBRACE program RBRACE
Rule 79    struct_method -> FUNC LPAREN VARIABLE VARIABLE RPAREN VARIABLE LPAREN param_list RPAREN type LBRACE program RBRACE
Rule 80    struct_method -> FUNC LPAREN VARIABLE VARIABLE RPAREN VARIABLE LPAREN RPAREN type LBRACE program RBRACE
Rule 81    struct_def -> TYPE VARIABLE STRUCT LBRACE struct_fields RBRACE
Rule 82    struct_fields -> struct_field
Rule 83    struct_fields -> struct_field struct_fields
Rule 84    struct_field -> VARIABLE type
Rule 85    struct_field -> type
Rule 86    struct_instance -> VARIABLE LBRACE struct_fields_values RBRACE
Rule 87    struct_fields_values -> field_value
Rule 88    struct_fields_values -> field_value COMMA struct_fields_values
Rule 89    field_value -> VARIABLE COLON expression
Rule 90    switch_stmt -> SWITCH expression LBRACE case_list RBRACE
Rule 91    switch_stmt -> SWITCH LBRACE case_list RBRACE
Rule 92    case_list -> case_clause
Rule 93    case_list -> case_clause case_list
Rule 94    case_clause -> CASE expression COLON program
Rule 95    case_clause -> DEFAULT COLON program
Rule 96    map_declaration -> VAR VARIABLE MAP LBRACKET type RBRACKET type
Rule 97    map_declaration -> VARIABLE ASIG MAP LBRACKET type RBRACKET type
Rule 98    make_stmt -> VARIABLE ASIG MAKE LPAREN MAP LBRACKET type RBRACKET type RPAREN
Rule 99    make_stmt -> VARIABLE ASIG MAKE LPAREN LBRACKET RBRACKET type RPAREN
Rule 100   make_expr -> MAKE LPAREN MAP LBRACKET type RBRACKET type RPAREN
Rule 101   make_expr -> MAKE LPAREN LBRACKET RBRACKET type RPAREN
Rule 102   map_declaration_values -> VARIABLE ASIG MAP LBRACKET type RBRACKET type LBRACE map_kv_pairs RBRACE
Rule 103   map_kv_pairs -> map_kv_pair
Rule 104   map_kv_pairs -> map_kv_pair COMMA map_kv_pairs
Rule 105   map_kv_pair -> STRING COLON expression
Rule 106   array_declaration -> VAR VARIABLE LBRACKET NUMBER RBRACKET type
Rule 107   array_declaration -> VARIABLE ASIG LBRACKET NUMBER RBRACKET type LBRACE array_values RBRACE
Rule 108   array_values -> expression
Rule 109   array_values -> expression COMMA array_values
Rule 110   slice_declaration -> VAR VARIABLE LBRACKET RBRACKET type
Rule 111   slice_declaration -> VARIABLE ASIG LBRACKET RBRACKET type LBRACE slice_values RBRACE
Rule 112   slice_values -> expression
Rule 113   slice_values -> expression COMMA slice_values
Rule 114   new_stmt -> VARIABLE ASIG NEW LPAREN VARIABLE RPAREN
Rule 115   break_stmt -> BREAK
Rule 116   increment_stmt -> VARIABLE INCREMENT
Rule 117   increment_stmt -> VARIABLE DECREMENT

Terminals, with rules where they appear

AMPER                : 34
AND                  : 49
ASIG                 : 26 31 97 98 99 102 107 111 114
ASSIGN               : 30
BOOL_TYPE            : 70
BREAK                : 115
CASE                 : 94
COLON                : 89 94 95 105
COMMA                : 32 42 45 88 104 109 113
CONTINUE             : 75
DECREMENT            : 117
DEFAULT              : 95
DIVIDE               : 59
DOT                  : 32 33 34
ELSE                 : 72
EQ                   : 51
FALSE                : 
FLOAT                : 28 61
FLOAT64_TYPE         : 68
FMT                  : 32 33 34
FOR                  : 73 74
FUNC                 : 35 36 38 79 80
FUNCNAME             : 
GE                   : 56
GT                   : 54
IF                   : 71 72
IMPORT               : 
INCREMENT            : 116
INT_TYPE             : 67
LBRACE               : 35 36 78 79 80 81 86 90 91 102 107 111
LBRACKET             : 96 97 98 99 100 101 102 106 107 110 111
LE                   : 55
LPAREN               : 32 33 34 35 36 38 39 40 64 79 79 80 80 98 99 100 101 114
LT                   : 53
MAKE                 : 98 99 100 101
MAP                  : 96 97 98 100 102
MINUS                : 48
MOD                  : 
NE                   : 52
NEW                  : 114
NUMBER               : 27 60 106 107
OR                   : 50
PACKAGE              : 
PLUS                 : 47
PRINT                : 
PRINTF               : 32
PRINTLN              : 33
RANGE                : 
RBRACE               : 35 36 78 79 80 81 86 90 91 102 107 111
RBRACKET             : 96 97 98 99 100 101 102 106 107 110 111
RETURN               : 37
RPAREN               : 32 33 34 35 36 38 39 40 64 79 79 80 80 98 99 100 101 114
SCANLN               : 34
SEMICOLON            : 74 74
STRING               : 32 62 105
STRING_TYPE          : 69
STRUCT               : 81
SWITCH               : 90 91
TIMES                : 58
TRUE                 : 
TYPE                 : 81
UINT                 : 
VAR                  : 25 26 96 106 110
VARIABLE             : 25 26 29 30 31 34 35 36 38 39 40 43 63 79 79 79 80 80 80 81 84 86 89 96 97 98 99 102 106 107 110 111 114 114 116 117
error                : 

Nonterminals, with rules where they appear

arg_list             : 39 45
array_declaration    : 18
array_values         : 107 109
assignment           : 4 74 76
block                : 38 71 72 72 73 74
break_stmt           : 22
case_clause          : 92 93
case_list            : 90 91 93
continue_stmt        : 7
declaration          : 3
expression           : 26 30 31 32 33 37 44 45 47 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 64 71 72 73 74 89 90 94 105 108 109 112 113
factor               : 57 58 59
field_value          : 87 88
for_stmt             : 13
for_update           : 74
func_call            : 11
func_def             : 9
func_no_params       : 10
if_stmt              : 12
increment_stmt       : 23 77
input_stmt           : 6
make_expr            : 65
make_stmt            : 20
map_declaration      : 16
map_declaration_values : 17
map_kv_pair          : 103 104
map_kv_pairs         : 102 104
new_stmt             : 21
param                : 41 42
param_list           : 35 42 79
print_stmt           : 5
program              : 2 35 36 78 79 80 94 95 0
return_stmt          : 24
slice_declaration    : 19
slice_values         : 111 113
statement            : 1 2
struct_def           : 14
struct_field         : 82 83
struct_fields        : 81 83
struct_fields_values : 86 88
struct_instance      : 66
struct_method        : 8
switch_stmt          : 15
term                 : 46 47 48 58 59
type                 : 25 26 35 36 43 79 80 84 85 96 96 97 97 98 98 99 100 100 101 102 102 106 107 110 111

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . statement program
    (3) statement -> . declaration
    (4) statement -> . assignment
    (5) statement -> . print_stmt
    (6) statement -> . input_stmt
    (7) statement -> . continue_stmt
    (8) statement -> . struct_method
    (9) statement -> . func_def
    (10) statement -> . func_no_params
    (11) statement -> . func_call
    (12) statement -> . if_stmt
    (13) statement -> . for_stmt
    (14) statement -> . struct_def
    (15) statement -> . switch_stmt
    (16) statement -> . map_declaration
    (17) statement -> . map_declaration_values
    (18) statement -> . array_declaration
    (19) statement -> . slice_declaration
    (20) statement -> . make_stmt
    (21) statement -> . new_stmt
    (22) statement -> . break_stmt
    (23) statement -> . increment_stmt
    (24) statement -> . return_stmt
    (25) declaration -> . VAR VARIABLE type
    (26) declaration -> . VAR VARIABLE type ASIG expression
    (30) assignment -> . VARIABLE ASSIGN expression
    (31) assignment -> . VARIABLE ASIG expression
    (32) print_stmt -> . FMT DOT PRINTF LPAREN STRING COMMA expression RPAREN
    (33) print_stmt -> . FMT DOT PRINTLN LPAREN expression RPAREN
    (34) input_stmt -> . FMT DOT SCANLN LPAREN AMPER VARIABLE RPAREN
    (75) continue_stmt -> . CONTINUE
    (79) struct_method -> . FUNC LPAREN VARIABLE VARIABLE RPAREN VARIABLE LPAREN param_list RPAREN type LBRACE program RBRACE
    (80) struct_method -> . FUNC LPAREN VARIABLE VARIABLE RPAREN VARIABLE LPAREN RPAREN type LBRACE program RBRACE
    (35) func_def -> . FUNC VARIABLE LPAREN param_list RPAREN type LBRACE program RBRACE
    (36) func_def -> . FUNC VARIABLE LPAREN RPAREN type LBRACE program RBRACE
    (38) func_no_params -> . FUNC VARIABLE LPAREN RPAREN block
    (39) func_call -> . VARIABLE LPAREN arg_list RPAREN
    (40) func_call -> . VARIABLE LPAREN RPAREN
    (71) if_stmt -> . IF expression block
    (72) if_stmt -> . IF expression block ELSE block
    (73) for_stmt -> . FOR expression block
    (74) for_stmt -> . FOR assignment SEMICOLON expression SEMICOLON for_update block
    (81) struct_def -> . TYPE VARIABLE STRUCT LBRACE struct_fields RBRACE
    (90) switch_stmt -> . SWITCH expression LBRACE case_list RBRACE
    (91) switch_stmt -> . SWITCH LBRACE case_list RBRACE
    (96) map_declaration -> . VAR VARIABLE MAP LBRACKET type RBRACKET type
    (97) map_declaration -> . VARIABLE ASIG MAP LBRACKET type RBRACKET type
    (102) map_declaration_values -> . VARIABLE ASIG MAP LBRACKET type RBRACKET type LBRACE map_kv_pairs RBRACE
    (106) array_declaration -> . VAR VARIABLE LBRACKET NUMBER RBRACKET type
    (107) array_declaration -> . VARIABLE ASIG LBRACKET NUMBER RBRACKET type LBRACE array_values RBRACE
    (110) slice_declaration -> . VAR VARIABLE LBRACKET RBRACKET type
    (111) slice_declaration -> . VARIABLE ASIG LBRACKET RBRACKET type LBRACE slice_values RBRACE
    (98) make_stmt -> . VARIABLE ASIG MAKE LPAREN MAP LBRACKET type RBRACKET type RPAREN
    (99) make_stmt -> . VARIABLE ASIG MAKE LPAREN LBRACKET RBRACKET type RPAREN
    (114) new_stmt -> . VARIABLE ASIG NEW LPAREN VARIABLE RPAREN
    (115) break_stmt -> . BREAK
    (116) increment_stmt -> . VARIABLE INCREMENT
    (117) increment_stmt -> . VARIABLE DECREMENT
    (37) return_stmt -> . RETURN expression

    VAR             shift and go to state 25
    VARIABLE        shift and go to state 26
    FMT             shift and go to state 27
    CONTINUE        shift and go to state 28
    FUNC            shift and go to state 29
    IF              shift and go to state 30
    FOR             shift and go to state 31
    TYPE            shift and go to state 32
    SWITCH          shift and go to state 33
    BREAK           shift and go to state 34
    RETURN          shift and go to state 35

    program                        shift and go to state 1
    statement                      shift and go to state 2
    declaration                    shift and go to state 3
    assignment                     shift and go to state 4
    print_stmt                     shift and go to state 5
    input_stmt                     shift and go to state 6
    continue_stmt                  shift and go to state 7
    struct_method                  shift and go to state 8
    func_def                       shift and go to state 9
    func_no_params                 shift and go to state 10
    func_call                      shift and go to state 11
    if_stmt                        shift and go to state 12
    for_stmt                       shift and go to state 13
    struct_def                     shift and go to state 14
    switch_stmt                    shift and go to state 15
    map_declaration                shift and go to state 16
    map_declaration_values         shift and go to state 17
    array_declaration              shift and go to state 18
    slice_declaration              shift and go to state 19
    make_stmt                      shift and go to state 20
    new_stmt                       shift and go to state 21
    break_stmt                     shift and go to state 22
    increment_stmt                 shift and go to state 23
    return_stmt                    shift and go to state 24

state 1

    (0) S' -> program .



state 2

    (1) program -> statement .
    (2) program -> statement . program
    (1) program -> . statement
    (2) program -> . statement program
    (3) statement -> . declaration
    (4) statement -> . assignment
    (5) statement -> . print_stmt
    (6) statement -> . input_stmt
    (7) statement -> . continue_stmt
    (8) statement -> . struct_method
    (9) statement -> . func_def
    (10) statement -> . func_no_params
    (11) statement -> . func_call
    (12) statement -> . if_stmt
    (13) statement -> . for_stmt
    (14) statement -> . struct_def
    (15) statement -> . switch_stmt
    (16) statement -> . map_declaration
    (17) statement -> . map_declaration_values
    (18) statement -> . array_declaration
    (19) statement -> . slice_declaration
    (20) statement -> . make_stmt
    (21) statement -> . new_stmt
    (22) statement -> . break_stmt
    (23) statement -> . increment_stmt
    (24) statement -> . return_stmt
    (25) declaration -> . VAR VARIABLE type
    (26) declaration -> . VAR VARIABLE type ASIG expression
    (30) assignment -> . VARIABLE ASSIGN expression
    (31) assignment -> . VARIABLE ASIG expression
    (32) print_stmt -> . FMT DOT PRINTF LPAREN STRING COMMA expression RPAREN
    (33) print_stmt -> . FMT DOT PRINTLN LPAREN expression RPAREN
    (34) input_stmt -> . FMT DOT SCANLN LPAREN AMPER VARIABLE RPAREN
    (75) continue_stmt -> . CONTINUE
    (79) struct_method -> . FUNC LPAREN VARIABLE VARIABLE RPAREN VARIABLE LPAREN param_list RPAREN type LBRACE program RBRACE
    (80) struct_method -> . FUNC LPAREN VARIABLE VARIABLE RPAREN VARIABLE LPAREN RPAREN type LBRACE program RBRACE
    (35) func_def -> . FUNC VARIABLE LPAREN param_list RPAREN type LBRACE program RBRACE
    (36) func_def -> . FUNC VARIABLE LPAREN RPAREN type LBRACE program RBRACE
    (38) func_no_params -> . FUNC VARIABLE LPAREN RPAREN block
    (39) func_call -> . VARIABLE LPAREN arg_list RPAREN
    (40) func_call -> . VARIABLE LPAREN RPAREN
    (71) if_stmt -> . IF expression block
    (72) if_stmt -> . IF expression block ELSE block
    (73) for_stmt -> . FOR expression block
    (74) for_stmt -> . FOR assignment SEMICOLON expression SEMICOLON for_update block
    (81) struct_def -> . TYPE VARIABLE STRUCT LBRACE struct_fields RBRACE
    (90) switch_stmt -> . SWITCH expression LBRACE case_list RBRACE
    (91) switch_stmt -> . SWITCH LBRACE case_list RBRACE
    (96) map_declaration -> . VAR VARIABLE MAP LBRACKET type RBRACKET type
    (97) map_declaration -> . VARIABLE ASIG MAP LBRACKET type RBRACKET type
    (102) map_declaration_values -> . VARIABLE ASIG MAP LBRACKET type RBRACKET type LBRACE map_kv_pairs RBRACE
    (106) array_declaration -> . VAR VARIABLE LBRACKET NUMBER RBRACKET type
    (107) array_declaration -> . VARIABLE ASIG LBRACKET NUMBER RBRACKET type LBRACE array_values RBRACE
    (110) slice_declaration -> . VAR VARIABLE LBRACKET RBRACKET type
    (111) slice_declaration -> . VARIABLE ASIG LBRACKET RBRACKET type LBRACE slice_values RBRACE
    (98) make_stmt -> . VARIABLE ASIG MAKE LPAREN MAP LBRACKET type RBRACKET type RPAREN
    (99) make_stmt -> . VARIABLE ASIG MAKE LPAREN LBRACKET RBRACKET type RPAREN
    (114) new_stmt -> . VARIABLE ASIG NEW LPAREN VARIABLE RPAREN
    (115) break_stmt -> . BREAK
    (116) increment_stmt -> . VARIABLE INCREMENT
    (117) increment_stmt -> . VARIABLE DECREMENT
    (37) return_stmt -> . RETURN expression

    $end            reduce using rule 1 (program -> statement .)
    RBRACE          reduce using rule 1 (program -> statement .)
    CASE            reduce using rule 1 (program -> statement .)
    DEFAULT         reduce using rule 1 (program -> statement .)
    VAR             shift and go to state 25
    VARIABLE        shift and go to state 26
    FMT             shift and go to state 27
    CONTINUE        shift and go to state 28
    FUNC            shift and go to state 29
    IF              shift and go to state 30
    FOR             shift and go to state 31
    TYPE            shift and go to state 32
    SWITCH          shift and go to state 33
    BREAK           shift and go to state 34
    RETURN          shift and go to state 35

    statement                      shift and go to state 2
    program                        shift and go to state 36
    declaration                    shift and go to state 3
    assignment                     shift and go to state 4
    print_stmt                     shift and go to state 5
    input_stmt                     shift and go to state 6
    continue_stmt                  shift and go to state 7
    struct_method                  shift and go to state 8
    func_def                       shift and go to state 9
    func_no_params                 shift and go to state 10
    func_call                      shift and go to state 11
    if_stmt                        shift and go to state 12
    for_stmt                       shift and go to state 13
    struct_def                     shift and go to state 14
    switch_stmt                    shift and go to state 15
    map_declaration                shift and go to state 16
    map_declaration_values         shift and go to state 17
    array_declaration              shift and go to state 18
    slice_declaration              shift and go to state 19
    make_stmt                      shift and go to state 20
    new_stmt                       shift and go to state 21
    break_stmt                     shift and go to state 22
    increment_stmt                 shift and go to state 23
    return_stmt                    shift and go to state 24

state 3

    (3) statement -> declaration .

    VAR             reduce using rule 3 (statement -> declaration .)
    VARIABLE        reduce using rule 3 (statement -> declaration .)
    FMT             reduce using rule 3 (statement -> declaration .)
    CONTINUE        reduce using rule 3 (statement -> declaration .)
    FUNC            reduce using rule 3 (statement -> declaration .)
    IF              reduce using rule 3 (statement -> declaration .)
    FOR             reduce using rule 3 (statement -> declaration .)
    TYPE            reduce using rule 3 (statement -> declaration .)
    SWITCH          reduce using rule 3 (statement -> declaration .)
    BREAK           reduce using rule 3 (statement -> declaration .)
    RETURN          reduce using rule 3 (statement -> declaration .)
    $end            reduce using rule 3 (statement -> declaration .)
    RBRACE          reduce using rule 3 (statement -> declaration .)
    CASE            reduce using rule 3 (statement -> declaration .)
    DEFAULT         reduce using rule 3 (statement -> declaration .)


state 4

    (4) statement -> assignment .

    VAR             reduce using rule 4 (statement -> assignment .)
    VARIABLE        reduce using rule 4 (statement -> assignment .)
    FMT             reduce using rule 4 (statement -> assignment .)
    CONTINUE        reduce using rule 4 (statement -> assignment .)
    FUNC            reduce using rule 4 (statement -> assignment .)
    IF              reduce using rule 4 (statement -> assignment .)
    FOR             reduce using rule 4 (statement -> assignment .)
    TYPE            reduce using rule 4 (statement -> assignment .)
    SWITCH          reduce using rule 4 (statement -> assignment .)
    BREAK           reduce using rule 4 (statement -> assignment .)
    RETURN          reduce using rule 4 (statement -> assignment .)
    $end            reduce using rule 4 (statement -> assignment .)
    RBRACE          reduce using rule 4 (statement -> assignment .)
    CASE            reduce using rule 4 (statement -> assignment .)
    DEFAULT         reduce using rule 4 (statement -> assignment .)


state 5

    (5) statement -> print_stmt .

    VAR             reduce using rule 5 (statement -> print_stmt .)
    VARIABLE        reduce using rule 5 (statement -> print_stmt .)
    FMT             reduce using rule 5 (statement -> print_stmt .)
    CONTINUE        reduce using rule 5 (statement -> print_stmt .)
    FUNC            reduce using rule 5 (statement -> print_stmt .)
    IF              reduce using rule 5 (statement -> print_stmt .)
    FOR             reduce using rule 5 (statement -> print_stmt .)
    TYPE            reduce using rule 5 (statement -> print_stmt .)
    SWITCH          reduce using rule 5 (statement -> print_stmt .)
    BREAK           reduce using rule 5 (statement -> print_stmt .)
    RETURN          reduce using rule 5 (statement -> print_stmt .)
    $end            reduce using rule 5 (statement -> print_stmt .)
    RBRACE          reduce using rule 5 (statement -> print_stmt .)
    CASE            reduce using rule 5 (statement -> print_stmt .)
    DEFAULT         reduce using rule 5 (statement -> print_stmt .)


state 6

    (6) statement -> input_stmt .

    VAR             reduce using rule 6 (statement -> input_stmt .)
    VARIABLE        reduce using rule 6 (statement -> input_stmt .)
    FMT             reduce using rule 6 (statement -> input_stmt .)
    CONTINUE        reduce using rule 6 (statement -> input_stmt .)
    FUNC            reduce using rule 6 (statement -> input_stmt .)
    IF              reduce using rule 6 (statement -> input_stmt .)
    FOR             reduce using rule 6 (statement -> input_stmt .)
    TYPE            reduce using rule 6 (statement -> input_stmt .)
    SWITCH          reduce using rule 6 (statement -> input_stmt .)
    BREAK           reduce using rule 6 (statement -> input_stmt .)
    RETURN          reduce using rule 6 (statement -> input_stmt .)
    $end            reduce using rule 6 (statement -> input_stmt .)
    RBRACE          reduce using rule 6 (statement -> input_stmt .)
    CASE            reduce using rule 6 (statement -> input_stmt .)
    DEFAULT         reduce using rule 6 (statement -> input_stmt .)


state 7

    (7) statement -> continue_stmt .

    VAR             reduce using rule 7 (statement -> continue_stmt .)
    VARIABLE        reduce using rule 7 (statement -> continue_stmt .)
    FMT             reduce using rule 7 (statement -> continue_stmt .)
    CONTINUE        reduce using rule 7 (statement -> continue_stmt .)
    FUNC            reduce using rule 7 (statement -> continue_stmt .)
    IF              reduce using rule 7 (statement -> continue_stmt .)
    FOR             reduce using rule 7 (statement -> continue_stmt .)
    TYPE            reduce using rule 7 (statement -> continue_stmt .)
    SWITCH          reduce using rule 7 (statement -> continue_stmt .)
    BREAK           reduce using rule 7 (statement -> continue_stmt .)
    RETURN          reduce using rule 7 (statement -> continue_stmt .)
    $end            reduce using rule 7 (statement -> continue_stmt .)
    RBRACE          reduce using rule 7 (statement -> continue_stmt .)
    CASE            reduce using rule 7 (statement -> continue_stmt .)
    DEFAULT         reduce using rule 7 (statement -> continue_stmt .)


state 8

    (8) statement -> struct_method .

    VAR             reduce using rule 8 (statement -> struct_method .)
    VARIABLE        reduce using rule 8 (statement -> struct_method .)
    FMT             reduce using rule 8 (statement -> struct_method .)
    CONTINUE        reduce using rule 8 (statement -> struct_method .)
    FUNC            reduce using rule 8 (statement -> struct_method .)
    IF              reduce using rule 8 (statement -> struct_method .)
    FOR             reduce using rule 8 (statement -> struct_method .)
    TYPE            reduce using rule 8 (statement -> struct_method .)
    SWITCH          reduce using rule 8 (statement -> struct_method .)
    BREAK           reduce using rule 8 (statement -> struct_method .)
    RETURN          reduce using rule 8 (statement -> struct_method .)
    $end            reduce using rule 8 (statement -> struct_method .)
    RBRACE          reduce using rule 8 (statement -> struct_method .)
    CASE            reduce using rule 8 (statement -> struct_method .)
    DEFAULT         reduce using rule 8 (statement -> struct_method .)


state 9

    (9) statement -> func_def .

    VAR             reduce using rule 9 (statement -> func_def .)
    VARIABLE        reduce using rule 9 (statement -> func_def .)
    FMT             reduce using rule 9 (statement -> func_def .)
    CONTINUE        reduce using rule 9 (statement -> func_def .)
    FUNC            reduce using rule 9 (statement -> func_def .)
    IF              reduce using rule 9 (statement -> func_def .)
    FOR             reduce using rule 9 (statement -> func_def .)
    TYPE            reduce using rule 9 (statement -> func_def .)
    SWITCH          reduce using rule 9 (statement -> func_def .)
    BREAK           reduce using rule 9 (statement -> func_def .)
    RETURN          reduce using rule 9 (statement -> func_def .)
    $end            reduce using rule 9 (statement -> func_def .)
    RBRACE          reduce using rule 9 (statement -> func_def .)
    CASE            reduce using rule 9 (statement -> func_def .)
    DEFAULT         reduce using rule 9 (statement -> func_def .)


state 10

    (10) statement -> func_no_params .

    VAR             reduce using rule 10 (statement -> func_no_params .)
    VARIABLE        reduce using rule 10 (statement -> func_no_params .)
    FMT             reduce using rule 10 (statement -> func_no_params .)
    CONTINUE        reduce using rule 10 (statement -> func_no_params .)
    FUNC            reduce using rule 10 (statement -> func_no_params .)
    IF              reduce using rule 10 (statement -> func_no_params .)
    FOR             reduce using rule 10 (statement -> func_no_params .)
    TYPE            reduce using rule 10 (statement -> func_no_params .)
    SWITCH          reduce using rule 10 (statement -> func_no_params .)
    BREAK           reduce using rule 10 (statement -> func_no_params .)
    RETURN          reduce using rule 10 (statement -> func_no_params .)
    $end            reduce using rule 10 (statement -> func_no_params .)
    RBRACE          reduce using rule 10 (statement -> func_no_params .)
    CASE            reduce using rule 10 (statement -> func_no_params .)
    DEFAULT         reduce using rule 10 (statement -> func_no_params .)


state 11

    (11) statement -> func_call .

    VAR             reduce using rule 11 (statement -> func_call .)
    VARIABLE        reduce using rule 11 (statement -> func_call .)
    FMT             reduce using rule 11 (statement -> func_call .)
    CONTINUE        reduce using rule 11 (statement -> func_call .)
    FUNC            reduce using rule 11 (statement -> func_call .)
    IF              reduce using rule 11 (statement -> func_call .)
    FOR             reduce using rule 11 (statement -> func_call .)
    TYPE            reduce using rule 11 (statement -> func_call .)
    SWITCH          reduce using rule 11 (statement -> func_call .)
    BREAK           reduce using rule 11 (statement -> func_call .)
    RETURN          reduce using rule 11 (statement -> func_call .)
    $end            reduce using rule 11 (statement -> func_call .)
    RBRACE          reduce using rule 11 (statement -> func_call .)
    CASE            reduce using rule 11 (statement -> func_call .)
    DEFAULT         reduce using rule 11 (statement -> func_call .)


state 12

    (12) statement -> if_stmt .

    VAR             reduce using rule 12 (statement -> if_stmt .)
    VARIABLE        reduce using rule 12 (statement -> if_stmt .)
    FMT             reduce using rule 12 (statement -> if_stmt .)
    CONTINUE        reduce using rule 12 (statement -> if_stmt .)
    FUNC            reduce using rule 12 (statement -> if_stmt .)
    IF              reduce using rule 12 (statement -> if_stmt .)
    FOR             reduce using rule 12 (statement -> if_stmt .)
    TYPE            reduce using rule 12 (statement -> if_stmt .)
    SWITCH          reduce using rule 12 (statement -> if_stmt .)
    BREAK           reduce using rule 12 (statement -> if_stmt .)
    RETURN          reduce using rule 12 (statement -> if_stmt .)
    $end            reduce using rule 12 (statement -> if_stmt .)
    RBRACE          reduce using rule 12 (statement -> if_stmt .)
    CASE            reduce using rule 12 (statement -> if_stmt .)
    DEFAULT         reduce using rule 12 (statement -> if_stmt .)


state 13

    (13) statement -> for_stmt .

    VAR             reduce using rule 13 (statement -> for_stmt .)
    VARIABLE        reduce using rule 13 (statement -> for_stmt .)
    FMT             reduce using rule 13 (statement -> for_stmt .)
    CONTINUE        reduce using rule 13 (statement -> for_stmt .)
    FUNC            reduce using rule 13 (statement -> for_stmt .)
    IF              reduce using rule 13 (statement -> for_stmt .)
    FOR             reduce using rule 13 (statement -> for_stmt .)
    TYPE            reduce using rule 13 (statement -> for_stmt .)
    SWITCH          reduce using rule 13 (statement -> for_stmt .)
    BREAK           reduce using rule 13 (statement -> for_stmt .)
    RETURN          reduce using rule 13 (statement -> for_stmt .)
    $end            reduce using rule 13 (statement -> for_stmt .)
    RBRACE          reduce using rule 13 (statement -> for_stmt .)
    CASE            reduce using rule 13 (statement -> for_stmt .)
    DEFAULT         reduce using rule 13 (statement -> for_stmt .)


state 14

    (14) statement -> struct_def .

    VAR             reduce using rule 14 (statement -> struct_def .)
    VARIABLE        reduce using rule 14 (statement -> struct_def .)
    FMT             reduce using rule 14 (statement -> struct_def .)
    CONTINUE        reduce using rule 14 (statement -> struct_def .)
    FUNC            reduce using rule 14 (statement -> struct_def .)
    IF              reduce using rule 14 (statement -> struct_def .)
    FOR             reduce using rule 14 (statement -> struct_def .)
    TYPE            reduce using rule 14 (statement -> struct_def .)
    SWITCH          reduce using rule 14 (statement -> struct_def .)
    BREAK           reduce using rule 14 (statement -> struct_def .)
    RETURN          reduce using rule 14 (statement -> struct_def .)
    $end            reduce using rule 14 (statement -> struct_def .)
    RBRACE          reduce using rule 14 (statement -> struct_def .)
    CASE            reduce using rule 14 (statement -> struct_def .)
    DEFAULT         reduce using rule 14 (statement -> struct_def .)


state 15

    (15) statement -> switch_stmt .

    VAR             reduce using rule 15 (statement -> switch_stmt .)
    VARIABLE        reduce using rule 15 (statement -> switch_stmt .)
    FMT             reduce using rule 15 (statement -> switch_stmt .)
    CONTINUE        reduce using rule 15 (statement -> switch_stmt .)
    FUNC            reduce using rule 15 (statement -> switch_stmt .)
    IF              reduce using rule 15 (statement -> switch_stmt .)
    FOR             reduce using rule 15 (statement -> switch_stmt .)
    TYPE            reduce using rule 15 (statement -> switch_stmt .)
    SWITCH          reduce using rule 15 (statement -> switch_stmt .)
    BREAK           reduce using rule 15 (statement -> switch_stmt .)
    RETURN          reduce using rule 15 (statement -> switch_stmt .)
    $end            reduce using rule 15 (statement -> switch_stmt .)
    RBRACE          reduce using rule 15 (statement -> switch_stmt .)
    CASE            reduce using rule 15 (statement -> switch_stmt .)
    DEFAULT         reduce using rule 15 (statement -> switch_stmt .)


state 16

    (16) statement -> map_declaration .
